--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,6 @@
 <resources>
 
     <string name="app_name">ADNController</string>
-    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="BlueToothDevicesInfo">Device</string>
+    <string name="device_lookup">Devices</string>
 </resources>
